--- a/input.css
+++ b/input.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#hero {
+    background-image: url('../img/desktop/image-hero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@media(max-width: 576px) {
+    background-image: url('../img/mobile/image-hero.jpg');
+    background-position: center;
+}
